@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
 begin_comment
-comment|/*  * Copyright 2010 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+comment|/*  * Copyright 2011 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 
 begin_package
@@ -25,43 +25,7 @@ name|junit
 operator|.
 name|Assert
 operator|.
-name|assertEquals
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertNotNull
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertNull
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertTrue
+name|*
 import|;
 end_import
 
@@ -477,6 +441,21 @@ condition|)
 block|{
 return|return
 literal|"Who are you?"
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+literal|"nobody"
+operator|.
+name|equals
+argument_list|(
+name|name
+argument_list|)
+condition|)
+block|{
+return|return
+literal|null
 return|;
 block|}
 return|return
@@ -960,6 +939,20 @@ literal|"Should handle NULL parameter"
 argument_list|,
 literal|"Who are you?"
 argument_list|,
+name|result
+argument_list|)
+expr_stmt|;
+name|result
+operator|=
+name|pinger
+operator|.
+name|hello
+argument_list|(
+literal|"nobody"
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
 name|result
 argument_list|)
 expr_stmt|;
@@ -1905,6 +1898,115 @@ name|ROW_C
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testNullReturn
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|HTable
+name|table
+init|=
+operator|new
+name|HTable
+argument_list|(
+name|util
+operator|.
+name|getConfiguration
+argument_list|()
+argument_list|,
+name|TEST_TABLE
+argument_list|)
+decl_stmt|;
+name|Map
+argument_list|<
+name|byte
+index|[]
+argument_list|,
+name|String
+argument_list|>
+name|results
+init|=
+name|table
+operator|.
+name|coprocessorExec
+argument_list|(
+name|PingProtocol
+operator|.
+name|class
+argument_list|,
+name|ROW_A
+argument_list|,
+name|ROW_C
+argument_list|,
+operator|new
+name|Batch
+operator|.
+name|Call
+argument_list|<
+name|PingProtocol
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+block|{
+specifier|public
+name|String
+name|call
+parameter_list|(
+name|PingProtocol
+name|instance
+parameter_list|)
+block|{
+return|return
+name|instance
+operator|.
+name|hello
+argument_list|(
+literal|"nobody"
+argument_list|)
+return|;
+block|}
+block|}
+argument_list|)
+decl_stmt|;
+name|verifyRegionResults
+argument_list|(
+name|table
+argument_list|,
+name|results
+argument_list|,
+literal|null
+argument_list|,
+name|ROW_A
+argument_list|)
+expr_stmt|;
+name|verifyRegionResults
+argument_list|(
+name|table
+argument_list|,
+name|results
+argument_list|,
+literal|null
+argument_list|,
+name|ROW_B
+argument_list|)
+expr_stmt|;
+name|verifyRegionResults
+argument_list|(
+name|table
+argument_list|,
+name|results
+argument_list|,
+literal|null
+argument_list|,
+name|ROW_C
+argument_list|)
+expr_stmt|;
+block|}
 specifier|private
 name|void
 name|verifyRegionResults
@@ -1988,7 +2090,7 @@ operator|.
 name|getRegionName
 argument_list|()
 decl_stmt|;
-name|assertNotNull
+name|assertTrue
 argument_list|(
 literal|"Results should contain region "
 operator|+
@@ -2012,7 +2114,7 @@ literal|"'"
 argument_list|,
 name|results
 operator|.
-name|get
+name|containsKey
 argument_list|(
 name|region
 argument_list|)
