@@ -75,6 +75,7 @@ Release 0.91.0 - Unreleased
    HBASE-3598  Broken formatting in LRU stats output (Erik Onnen)
    HBASE-3758  Delete triggers pre/postScannerOpen upcalls of RegionObserver
                (Mingjie Lai via garyh)
+   HBASE-3790  Fix NPE in ExecResult.write() with null return value
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
